--- a/ProyectoNLFPD/templates/home/detalle-equipo.html
+++ b/ProyectoNLFPD/templates/home/detalle-equipo.html
@@ -14,5 +14,5 @@
 <h3>Estadio</h3>
 <p>{{object.estadio}}</p>
 
-
+<input class="btn btn-primary" type=button value="Regresar" onClick="javascript:history.go(-1);">
 {%endblock%}
