--- a/ProyectoNLFPD/templates/home/detalle-jugador.html
+++ b/ProyectoNLFPD/templates/home/detalle-jugador.html
@@ -17,4 +17,6 @@
 <h3>Posicion</h3>
 <p>{{object.posicion}}</p>
 
+<input class="btn btn-primary" type=button value="Regresar" onClick="javascript:history.go(-1);">
+
 {%endblock%}
