--- a/ProyectoNLFPD/templates/home/jugadores-equipo.html
+++ b/ProyectoNLFPD/templates/home/jugadores-equipo.html
@@ -40,5 +40,5 @@
             </table>
         </div>
     </div>
-                    		                            
+    <input class="btn btn-primary" type=button value="Regresar" onClick="javascript:history.go(-1);">                    		                            
 {% endblock %}
