--- a/ProyectoNLFPD/templates/home/detalle-estadio.html
+++ b/ProyectoNLFPD/templates/home/detalle-estadio.html
@@ -10,6 +10,6 @@
 
 <h3>Capacidad</h3>
 <p>{{object.capacidadEstadio}}</p>
-
+<input class="btn btn-primary" type=button value="Regresar" onClick="javascript:history.go(-1);">
 
 {%endblock%}
